# game

./: .clang-format  CMakeLists.txt  NOTES.md  ROADMAP.md  axes.cpp  axes.h  buffer.cpp  buffer.h  camera.cpp  camera.h  camera_rotation_smoothing  editor.cpp  editor.h  fragment.glsl  logging.cpp  logging.h  main.cpp  mat4.cpp  mat4.h  math.cpp  math.h  maths.cpp  maths.h  mesh.cpp  mesh.h  mesh2.cpp  mesh2.h  objects.cpp  objects.h  physics.cpp  physics.h  shader.cpp  shader.h  teleportation.cpp  teleportation.h  timer.h  undoredo.h  vec3.cpp  vec3.h  vertex.glsl  (+2 more)
shaders/: axis_vertex.glsl  phong_fragment.glsl  phong_vertex.glsl
